[B]Version 1.1.2[/B]
- Added Full Unicode Support

[B]Version 1.1.1[/B]
- Changed icon.png (Thanks goes to moneymaker for the new image)

[B]Version 1.1.0[/B]
- Rebuild content scraper after site totally changed

[B]Version 1.0.0[/B]
- Initial Version