@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.earthtouch" name="Earth Touch" provider-name="willforde" version="1.1.2">
+<addon id="plugin.video.earthtouch" name="Earth Touch" provider-name="willforde" version="1.1.3">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0"/>
-		<import addon="script.module.xbmcutil" version="2.0.2"/>
-		<import addon="plugin.video.youtube" version="4.4.6"/>
+		<import addon="script.module.xbmcutil" version="2.1.0"/>
+		<import addon="plugin.video.youtube" version="4.4.8"/>
 	</requires>
 	<extension library="addon.py" point="xbmc.python.pluginsource">
 		<provides>video</provides>
