@@ -24,12 +24,13 @@ class Initialize(listitem.VirtualFS):
 	@plugin.error_handler
 	def scraper(self):
 		# Create urlhandler and Fetch Channel Page
-		url = u"http://www.earthtouchnews.com/videos/overview.aspx"
-		sourceCode = urlhandler.urlread(url, 3628800)# TTL = 4 Week
+		if "url" in plugin: url = "http://www.earthtouchnews.com/videos/%s/" % plugin["url"]
+		else: url = u"http://www.earthtouchnews.com/videos/overview/"
+		sourceCode = urlhandler.urlread(url, 604800)# TTL = 1 Week
 		parser = parsers.ShowParser()
 		
 		# Add Youtube and Vimeo Channels
-		self.add_youtube_channel(u"earthtouch", u"-All Videos", hasPlaylist=True)
+		self.add_youtube_channel(u"earthtouch", u"-%s" % plugin.getuni(16100), hasPlaylist=True, hasHD=True)
 		
 		# Set Content Properties
 		self.set_sort_methods(self.sort_method_title_ignore_the)
@@ -38,11 +39,45 @@ class Initialize(listitem.VirtualFS):
 		# Return List of Video Listitems
 		return parser.parse(sourceCode)
 
+class Cat(listitem.VirtualFS):
+	@plugin.error_handler
+	def scraper(self):
+		# Fetch SourceCode of Site
+		url = u"http://www.earthtouchnews.com/videos/overview/"
+		sourceCode = urlhandler.urlread(url, 604800) # TTL = 1 Week
+		
+		# Set Content Properties
+		self.set_sort_methods(self.sort_method_title_ignore_the)
+		self.set_content("files")
+		
+		# Fetch and Return VideoItems
+		return self.regex_scraper(sourceCode) 
+	
+	def regex_scraper(self, sourceCode):
+		# Create Speedup vars
+		import re
+		results = []
+		additem = results.append
+		localListitem = listitem.ListItem
+		
+		# Fetch Video Information from Page Source
+		for url in re.findall('<li class=\"\">\s+<a href="/videos/(.+?)/" >', sourceCode):
+			# Create listitem of Data
+			item = localListitem()
+			item.setLabel(url.replace("-", " ").title())
+			item.setParamDict(url=url)
+			
+			# Store Listitem data
+			additem(item.getListitemTuple(False))
+		
+		# Return list of listitems
+		return results
+
 class Videos(listitem.VirtualFS):
 	@plugin.error_handler
 	def scraper(self):
 		# Fetch Video Content
-		sourceCode = urlhandler.urlread(plugin["url"], 28800) # TTL = 8 Hours
+		sourceCode = urlhandler.urlread(plugin["url"], 14400) # TTL = 4 Hours
 		parser = parsers.EpisodeParser()
 		
 		# Set Content Properties
